--- a/src/pages/writings/posts/[slug].astro
+++ b/src/pages/writings/posts/[slug].astro
@@ -85,7 +85,7 @@ const metadata = {
       <Content />
     </article>
 
-    <h2 class="hhr text-peach">Responses</h2>
+    <h2>Responses</h2>
     <p>
       If you have thoughts or feelings about this post, send them my way via
       your preferred <Link url="/">communication channel</Link>. Webmention
@@ -97,7 +97,7 @@ const metadata = {
     post.data.series && (
       <Fragment>
         <div class="cntnr">
-          <h2 class="hhr text-peach">Series: '{post.data.series}'</h2>
+          <h2>Series: '{post.data.series}'</h2>
           <p>
             This post is part of the '{post.data.series}' series. If you liked
             it, you might also like these other posts in the series.
