Simplify styles for horizontal rule

--- a/src/pages/writings/posts/[slug].astro
+++ b/src/pages/writings/posts/[slug].astro
@@ -79,7 +79,7 @@ const metadata = {
 
     <TocNode heading={rootHeading} />
 
-    <hr class="-mx-4 my-4 border-surface1" />
+    <hr class="-mx-4 border-surface1" />
 
     <article class="md-post">
       <Content />
