Add missing dot before class name in comment

--- a/src/components/SiteHeader.astro
+++ b/src/components/SiteHeader.astro
@@ -43,7 +43,7 @@ function getIsExactMatch(url: string): boolean {
   class="cntnr flex flex-col justify-between gap-2 border-b border-surface1 py-4 sm:flex-row"
   class:list={classes}>
   <Link url="/">
-    <!-- Class `inline-block` prevents underline from `Link`. -->
+    <!-- Class `.inline-block` prevents underline from `Link`. -->
     <span
       class="inline-block font-bold hover:underline hover:decoration-wavy"
       class:list={[{ 'text-peach underline decoration-peach': isHome }]}>
