--- a/src/layouts/content.astro
+++ b/src/layouts/content.astro
@@ -33,7 +33,7 @@ const { frontmatter, ...attrs } = Astro.props
     <Meta data={frontmatter} />
   </slot>
 
-  <div class="cntnr md-page my-4">
+  <div class="md-page cntnr my-4">
     <slot />
   </div>
 </ScreenLayout>
