--- a/src/pages/resume/pdf.astro
+++ b/src/pages/resume/pdf.astro
@@ -21,7 +21,7 @@ const pageTitle = getPageTitle('Résumé PDF')
 
 <RootLayout
   {...attrs}
-  rootClasses={['print:light-theme', 'pdf', 'text-[12px]', 'leading-snug']}>
+  rootClasses={['pdf', 'light-theme', 'text-[12px]', 'leading-snug']}>
   <slot
     slot="head"
     name="head">
@@ -43,83 +43,71 @@ const pageTitle = getPageTitle('Résumé PDF')
     />
   </slot>
 
-  <div>
-    <!-- Button panel -->
-    <div class="mx-auto my-4 w-[210mm] print:hidden">
-      <Link
-        url="/resume"
-        class="text-[1.167rem] underline decoration-blue before:mx-0.5 before:inline-block before:text-blue before:content-['←'] visited:decoration-mauve visited:before:text-mauve hover:decoration-wavy hover:before:-translate-x-1"
-        >Back to résumé</Link
-      >
-    </div>
+  <!-- Page -->
+  <div
+    id="page"
+    class="w-[calc(var(--page-width)_-_2_*_var(--page-x-margin))] bg-[repeating-linear-gradient(to_bottom,_transparent_0,_transparent_calc(var(--page-height)_-_var(--page-t-margin)_-_var(--page-b-margin)_-_1px),_var(--color-red)_calc(var(--page-height)_-_var(--page-t-margin)_-_var(--page-b-margin)_-_1px),_var(--color-red)_calc(var(--page-height)_-_var(--page-t-margin)_-_var(--page-b-margin)))] bg-[auto_calc(var(--page-height)_-_var(--page-b-margin)_-_var(--page-t-margin))] print:w-auto print:bg-none">
+    <!-- Top segment -->
+    <header class="mb-[5mm] text-center">
+      <h1 class="font-serif text-xl font-bold">
+        <Link url={site.baseUrl}>Dhruv Bhanushali</Link>
+      </h1>
+      {
+        recivi.bio.summary && (
+          <p
+            class="mb-2"
+            set:html={recivi.bio.summary}
+          />
+        )
+      }
+      <ContactList />
+    </header>
 
-    <!-- Page -->
-    <div
-      class="print:bg-white relative mx-auto mt-2 h-[297mm] w-[210mm] origin-top border p-[5mm] shadow-md after:absolute after:inset-[5mm] after:-z-10 after:border after:border-red hover:shadow-lg print:m-0 print:scale-100 print:border-none print:shadow-none print:after:hidden print:hover:shadow-none">
-      <!-- Top segment -->
-      <header class="mb-[5mm] text-center">
-        <h1 class="font-serif text-xl font-bold">
-          <Link url={site.baseUrl}>Dhruv Bhanushali</Link>
-        </h1>
-        {
-          recivi.bio.summary && (
-            <p
-              class="mb-2"
-              set:html={recivi.bio.summary}
-            />
-          )
-        }
-        <ContactList />
-      </header>
-
-      <!-- Two-pane content -->
-      <main class="grid grid-cols-2 gap-[5mm]">
-        <!-- Left pane -->
-        <div>
-          <h2 class="hhre mb-2 font-serif text-lg font-medium">Projects</h2>
-          <ul>
-            {
-              epics
-                .filter((epic) =>
-                  epic.projects.some((project) =>
-                    project.tags?.includes('resume_pdf')
-                  )
-                )
-                .map((epic) => <EpicEntry {epic} />)
-            }
-          </ul>
-
-          <h2 class="hhre mb-2 mt-[5mm] font-serif text-lg font-medium">
-            Other skills
-          </h2>
+    <!-- Two-pane content -->
+    <main class="grid grid-cols-2 gap-[5mm]">
+      <!-- Left pane -->
+      <div>
+        <h2 class="mb-2">Projects</h2>
+        <ul>
           {
-            recivi.bio.skills?.length ? (
-              <ul>
-                {recivi.bio.skills?.map((skill) => (
-                  <Fragment>
-                    {/* prettier-ignore */}
-                    <li class="inline after:content-[','] last:after:content-none">{skillDisplay(skill)}</li>
-                  </Fragment>
-                ))}
-              </ul>
-            ) : undefined
-          }
-        </div>
-
-        <!-- Right pane -->
-        <div>
-          <h2 class="hhre mb-2 font-serif text-lg font-medium">Roles</h2>
-          <ul>
-            {
-              orgs
-                .filter((org) =>
-                  org.roles.some((role) => role.tags?.includes('resume_pdf'))
+            epics
+              .filter((epic) =>
+                epic.projects.some((project) =>
+                  project.tags?.includes('resume_pdf')
                 )
-                .map((org) => <OrgEntry {org} />)
-            }
-          </ul>
-        </div>
-      </main>
-    </div>
+              )
+              .map((epic) => <EpicEntry {epic} />)
+          }
+        </ul>
+
+        <h2 class="mt-[5mm] mb-2">Other skills</h2>
+        {
+          recivi.bio.skills?.length ? (
+            <ul>
+              {recivi.bio.skills?.map((skill) => (
+                <Fragment>
+                  {/* prettier-ignore */}
+                  <li class="inline after:content-[','] last:after:content-none">{skillDisplay(skill)}</li>
+                </Fragment>
+              ))}
+            </ul>
+          ) : undefined
+        }
+      </div>
+
+      <!-- Right pane -->
+      <div>
+        <h2 class="mb-2">Roles</h2>
+        <ul>
+          {
+            orgs
+              .filter((org) =>
+                org.roles.some((role) => role.tags?.includes('resume_pdf'))
+              )
+              .map((org) => <OrgEntry {org} />)
+          }
+        </ul>
+      </div>
+    </main>
   </div>
 </RootLayout>
