--- a/src/layouts/screen.astro
+++ b/src/layouts/screen.astro
@@ -69,14 +69,8 @@ const hasSecondaryContent = Astro.slots.has('secondary')
     <!-- right column -->
     {
       hasSecondaryContent && (
-        <div class="flex flex-col overflow-y-auto">
-          <SiteHeader classes="xl:hidden" />
-
-          <aside class="grow xl:border-s xl:border-surface1">
-            <slot name="secondary" />
-          </aside>
-
-          <SiteFooter classes="xl:hidden" />
+        <div class="overflow-y-auto xl:border-s xl:border-surface1">
+          <slot name="secondary" />
         </div>
       )
     }
