Add a paragraph explaining why so many languages

--- a/src/layouts/resume.astro
+++ b/src/layouts/resume.astro
@@ -138,6 +138,11 @@ const hasContent = Astro.slots.has('default')
       Boolean(recivi.bio.languages?.length) && (
         <Fragment>
           <h2>Languages</h2>
+          <p>
+            Growing up in India, one tends to learn a lot of languages. I am no
+            exception. I speak the following languages, with varying levels of
+            fluency.
+          </p>
           <LanguageList />
         </Fragment>
       )
