--- a/src/pages/writings/posts/[slug].astro
+++ b/src/pages/writings/posts/[slug].astro
@@ -57,61 +57,86 @@ const metadata = {
     <Meta data={metadata} />
   </slot>
 
-  <SiteHeader classes="xl:hidden" />
+  <div class="grid grid-cols-[640px_320px_1fr]">
+    <!-- left column -->
+    <div>
+      <SiteHeader classes="xl:hidden" />
 
-  <aside class="cntnr my-4">
-    <h1 class="text-3xl text-peach sm:text-5xl">{post.data.title}</h1>
+      <aside class="cntnr my-4">
+        <h1 class="text-3xl text-peach sm:text-5xl">{post.data.title}</h1>
 
-    <dl class="mb-2 grid grid-cols-[auto_1fr] gap-x-2">
-      <dt class="text-overlay1">Tags:</dt>
-      <dd>
-        <ul class="inline">
-          {
-            post.data.categories.map((category: string) => (
-              <li class="inline-block after:mr-1 after:text-overlay1 after:content-['·'] last:after:content-none">
-                {category}
-              </li>
-            ))
-          }
-        </ul>
-      </dd>
-      <dt class="text-overlay1">First published:</dt>
-      <dd><DateComponent date={post.data.pubDate} /></dd>
-      <dt class="text-overlay1">Last updated:</dt>
-      <dd><DateComponent date={modDate} /></dd>
-    </dl>
+        <dl class="mb-2 grid grid-cols-[auto_1fr] gap-x-2">
+          <dt class="text-overlay1">Tags:</dt>
+          <dd>
+            <ul class="inline">
+              {
+                post.data.categories.map((category: string) => (
+                  <li class="inline-block after:mr-1 after:text-overlay1 after:content-['·'] last:after:content-none">
+                    {category}
+                  </li>
+                ))
+              }
+            </ul>
+          </dd>
+          <dt class="text-overlay1">First published:</dt>
+          <dd><DateComponent date={post.data.pubDate} /></dd>
+          <dt class="text-overlay1">Last updated:</dt>
+          <dd><DateComponent date={modDate} /></dd>
+        </dl>
 
-    <TocNode heading={rootHeading} />
+        <details class="group lg:hidden xl:block 2xl:hidden">
+          <summary
+            class="inline-block cursor-pointer rounded-sm border border-surface1 px-1 py-0.5 group-open:border-peach hover:bg-surface0"
+            >Contents</summary
+          >
+          <TocNode heading={rootHeading} />
+        </details>
 
-    <hr class="-mx-4 border-surface1" />
+        <hr class="-mx-4 border-surface1" />
 
-    <article class="md-post">
-      <Content />
-    </article>
+        <article class="md-post">
+          <Content />
+        </article>
 
-    <h2>Responses</h2>
-    <p>
-      If you have thoughts or feelings about this post, send them my way via
-      your preferred <Link url="/">communication channel</Link>. Webmention
-      support will be added soon.
-    </p>
+        <h2>Responses</h2>
+        <p>
+          If you have thoughts or feelings about this post, send them my way via
+          your preferred <Link url="/">communication channel</Link>. Webmention
+          support will be added soon.
+        </p>
 
-    {
-      post.data.series && (
-        <Fragment>
-          <h2>Series: '{post.data.series}'</h2>
-          <p>
-            This post is part of the '{post.data.series}' series. If you liked
-            it, you might also like these other posts in the series.
-          </p>
-          <Table
-            columns={postColumns}
-            data={seriesPostsData}
-          />
-        </Fragment>
-      )
-    }
-  </aside>
+        {
+          post.data.series && (
+            <Fragment>
+              <h2>Series: '{post.data.series}'</h2>
+              <p>
+                This post is part of the '{post.data.series}' series. If you
+                liked it, you might also like these other posts in the series.
+              </p>
+              <Table
+                columns={postColumns}
+                data={seriesPostsData}
+              />
+            </Fragment>
+          )
+        }
+      </aside>
 
-  <SiteFooter classes="xl:hidden" />
+      <SiteFooter classes="xl:hidden" />
+    </div>
+
+    <!-- right column -->
+    <div class="hidden border-s border-surface1 lg:block xl:hidden 2xl:block">
+      <div class="sticky top-0 max-h-screen overflow-y-auto px-4">
+        <h2>Contents</h2>
+        <TocNode heading={rootHeading} />
+      </div>
+    </div>
+
+    <!-- dark void -->
+    <div
+      class="hidden border-s border-surface1 bg-mantle lg:block xl:hidden 2xl:block"
+      aria-hidden="true">
+    </div>
+  </div>
 </WritingsLayout>
