--- a/src/styles/screen.css
+++ b/src/styles/screen.css
@@ -100,6 +100,11 @@
     @apply after:content-["→"] hover:after:translate-x-1;
   }
 
+  a[href^='#'] {
+    /* internal links */
+    @apply decoration-current visited:decoration-current;
+  }
+
   /* Tables
    * ====== */
 
